* xmas92 review, pointing out that we can use SkipGCALot here. * ayang review, DEBUG_ONLY -> NOT_PRODUCT * improved logging to test, and general ScavengeALotInterval to decrease the potential amount of garbage collections